--- a/static_content/index.html
+++ b/static_content/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>asdasdsdafcstgcreztre</title>
-  </head>
-  <body>
-    <a href="/upload.html" target="_blank">file upload</a>
-    <br>
-    <a href="/3" target="_blank">file download</a>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>U|D</title>
+</head>
+<body>
+    <div class="wraper">
+        
+    <div class="buttons">
+        <h1>Select</h1>
+        <div>
+            <button onclick="location.href='/upload.html'" class="Upload">Upload</button>
+        </div>
+            <button onclick="location.href='/3'" class="Download">Download</button>
+        </div>
+    </div>
+    </div>
+</body>
 </html>
