--- a/static_content/old/2023-10-04_2-index.html
+++ b/static_content/old/2023-10-04_2-index.html
@@ -14,7 +14,7 @@
         <div>
             <button onclick="location.href='/upload.html'" class="Upload">Upload</button>
         </div>
-            <button onclick="location.href='/download.html'" class="Download">Download</button>
+            <button onclick="location.href='/3'" class="Download">Download</button>
         </div>
     </div>
     </div>
