--- a/static_content/download.html
+++ b/static_content/download.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="style.css">
+    <title>Download</title>
+</head>
 
-<body id="body">
-    <!-- <form action="/5~file~" method="post" id="sex">
-        <button>Click to download: ~file~</button>
-    </form> -->
+<body id="body" class="wraper">
+    <h1>Download files</h1>
+    <form action="/5~file~" method="post" id="sex">
+        <button class="db"></button>
+    </form>
 </body>
 
 <script>
@@ -42,7 +47,7 @@
         })
 
     }
-
+// https://stackoverflow.com/questions/58423969/how-to-style-a-dynamically-created-button-with-javascript виж това, ако работи за js-a
 </script>
 
 </html>
