--- a/static_content/upload.html
+++ b/static_content/upload.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
-<html>
-<form action="/4" method="post" enctype="multipart/form-data">
-  <label for="file">File</label>
-  <input id="file" name="file" type="file" />
-  <button>Upload</button>
-</form>
+<html lang="en">
+<head>
+  <title>Upload</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  
+  <div class="wraper">
+    <h1>File</h1>
+    <form action="/4" method="post" enctype="multipart/form-data" class="cf">
+    <label for="file" class="h1"></label>
+    <input id="file" name="file" type="file" />
+    <button class="Upload">Upload</button>
+    </form>
+  </div>
+</body>
+    
 </html>
