--- a/static_content/download.html
+++ b/static_content/download.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="style.css">
     <title>Download</title>
@@ -7,13 +8,12 @@
 
 <body id="body" class="wraper">
     <h1>Download files</h1>
-    <!-- <form action="/5~file~" method="post" id="sex">
+    <!-- <form action="/5~file~" method="post">
         <button class="db"></button>
     </form> -->
 </body>
 
 <script>
-
     const Http = new XMLHttpRequest(); // it sucks that it's an XMLHttp, should compensate for that on the back end
     const url='/6';
     Http.open("POST", url);
@@ -49,9 +49,7 @@
 
             body.appendChild(form)
         })
-
     }
-// https://stackoverflow.com/questions/58423969/how-to-style-a-dynamically-created-button-with-javascript виж това, ако работи за js-a
 </script>
 
 </html>
