--- a/static_content/upload.html
+++ b/static_content/upload.html
@@ -14,7 +14,7 @@
     <h1>File</h1>
     <form action="/4" method="post" enctype="multipart/form-data" class="cf">
     <label for="file" class="h1"></label>
-    <input id="file" name="file" type="file" multiple/>
+    <input id="file" name="file" type="file"/> <!-- multiple -->
     <button class="Upload">Upload</button>
     </form>
   </div>
