--- a/static-content/upload.html
+++ b/static-content/upload.html
@@ -23,6 +23,8 @@
 </body>
 
 <script>
+	upload_started_at = 0
+
 	btn_upload.onclick = function(event) {
       	event.preventDefault();
 
@@ -31,11 +33,28 @@
 		if (xhr.upload) {
 			xhr.upload.onprogress = function(event) {
 				if (event.lengthComputable) {
+					str_progress = ''
+
                     // progress in format: 100.00
 					var progress = 0.01 * Math.round(10000 * event.loaded / event.total);
-					console.log('Upload progress=' + progress + '%');
+					// console.log('Upload progress=' + progress + '%');
                     progress_file_upload.value = progress
-					btn_upload.textContent = progress.toFixed(2) + '%'
+
+					str_progress += progress.toFixed(2) + '%'
+					btn_upload.textContent = 
+
+					now = (new Date).getTime()
+					time_elapsed = now - upload_started_at
+					data_uploaded = event.loaded
+					upload_speed = data_uploaded / time_elapsed // B per ms
+					upload_speed *= 1000 // B per second
+					upload_speed /= 1024 // KiB per second
+					upload_speed /= 1024 // MiB per second
+					upload_speed = upload_speed.toFixed(2)
+					str_progress += ' [' + upload_speed + 'MiB/s]'
+
+					console.log(str_progress)
+					btn_upload.textContent = str_progress
 				}
 			};
 		}
@@ -66,6 +85,8 @@
 		console.log('Upload started!');
         btn_upload.disabled = true
         btn_upload.textContent = "Upload in Progress"
+
+		upload_started_at = (new Date).getTime()
 	};
 </script>
 
