--- a/static-content/upload.html
+++ b/static-content/upload.html
@@ -53,7 +53,7 @@
 					upload_speed = upload_speed.toFixed(2)
 					str_progress += ' [' + upload_speed + 'MiB/s]'
 
-					console.log(str_progress)
+					// console.log(str_progress)
 					btn_upload.textContent = str_progress
 				}
 			};
