--- a/static-content/download.html
+++ b/static-content/download.html
@@ -16,23 +16,30 @@
 </body>
 
 <script>
-    const Http = new XMLHttpRequest(); // it sucks that it's an XMLHttp, should compensate for that on the back end
-    const url='/6';
-    Http.open("POST", url);
-    Http.send();
 
-    Http.onreadystatechange = (event) => {
-        // console.log(event)
-        if (Http.readyState !== XMLHttpRequest.DONE) {
-            return
+    function ls(ls_callback){
+        const Http = new XMLHttpRequest(); // it sucks that it's an XMLHttp, should compensate for that on the back end
+        const url='/6';
+        Http.open("POST", url);
+        Http.send();
+
+        Http.onreadystatechange = (event) => {
+            // console.log(event)
+            if (Http.readyState !== XMLHttpRequest.DONE) {
+                return
+            }
+
+            let response = Http.responseText
+            // console.log(response)
+
+            files = response.split('\n') // split
+            files = files.filter(n => n) // get rid of empty line
+
+            ls_callback(files)
         }
+    }
 
-        let response = Http.responseText
-        // console.log(response)
-
-        files = response.split('\n') // split
-        files = files.filter(n => n) // get rid of empty line
-
+    ls(function(files){
         let div = document.createElement("div");
         div.className = "dw_wrap"
 
@@ -54,7 +61,8 @@
         })
 
         body.appendChild(div)
-    }
+    })
+
 </script>
 
 </html>
