--- a/static-content/upload.html
+++ b/static-content/upload.html
@@ -23,7 +23,7 @@
 </body>
 
 <script>
-	upload_started_at = 0
+	var upload_started_at = 0
 
 	btn_upload.onclick = function(event) {
       	event.preventDefault();
